# tagrex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs  player.rs
app/ui/: app.js  index.html  style.css
crates/core/: Cargo.toml
crates/core/examples/: read_tags.rs  scan.rs
crates/core/src/: export.rs  journal.rs  lib.rs  mask.rs  matching.rs  model.rs  plan.rs  provider.rs  scanner.rs  transform.rs
crates/core/tests/: executor.rs  sqlite_journal.rs  tag_engine.rs
crates/providers-discogs/: Cargo.toml
crates/providers-discogs/examples/: discogs_search.rs
crates/providers-discogs/src/: lib.rs
crates/providers-musicbrainz/: Cargo.toml
crates/providers-musicbrainz/examples/: musicbrainz_search.rs
crates/providers-musicbrainz/src/: lib.rs
docs/: architecture.md
docs/design/: generator-exporter.md
