[package]
name = "tagrex"
description = "Cross-platform audio tag editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tagrex-core.workspace = true
tagrex-providers-discogs = { path = "../crates/providers-discogs" }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
# The Tauri shell (webview + frontend) is initialized separately on a machine
# with a display (cargo tauri init) — see app/src/lib.rs for the command layer
# it forwards to, and app/src/main.rs.
