[package]
name = "tagrex"
description = "Cross-platform audio tag editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# The GUI shell needs a newer toolchain than the core crates: Tauri 2 raises
# the minimum. Core (tagrex-core, providers) stays at the workspace's 1.75 so
# the library half remains widely compatible; only this desktop shell requires
# a modern rustc.
rust-version = "1.82"
publish = false

[dependencies]
tagrex-core.workspace = true
tagrex-providers-discogs = { path = "../crates/providers-discogs" }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tauri = { version = "2", features = [] }
# Native folder chooser behind the "Browse…" button; the scanner then recurses
# into the picked folder. The JS side calls it via window.__TAURI__.dialog.
tauri-plugin-dialog = "2"
base64 = "0.22.1"
# Native audio backend for the preview player: a rodio Sink queues tracks
# back-to-back for gapless playback, decoding every format we handle (incl. OGG)
# via Symphonia. Linux needs libasound2-dev (see CI).
rodio = "0.20"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# GUI shell: main.rs is the Tauri entry point (commands forward to the App
# command layer in lib.rs); the frontend is static HTML/CSS/JS under ui/.
# Run with `cargo run -p tagrex`; bundle a .app with `cargo tauri build`.
