[package]
name = "tagrex-core"
description = "TagRex core: tag model, bidirectional masks, transforms, transactional change pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
lofty = "0.22.2"
regex = "1.13.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror.workspace = true
walkdir = "2.5.0"
